--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,7 +15,7 @@ jobs:
               id: create_release
               uses: actions/create-release@v1
               env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  GITHUB_TOKEN: ${{ secrets.TOKEN_GITHUB }}
               with:
                   tag_name: ${{ github.ref }}
                   release_name: ${{ github.ref }}
@@ -49,4 +49,4 @@ jobs:
             - name: Publish to GitHub Packages
               run: npm publish
               env:
-                  NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  NODE_AUTH_TOKEN: ${{ secrets.TOKEN_GITHUB }}
