--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: Release & Publish
+name: Release & Publish :rocket:
 
 on:
     push:
@@ -9,7 +9,7 @@ jobs:
     release:
         runs-on: ubuntu-latest
         steps:
-            - name: Checkout code
+            - name: Checkout code 
               uses: actions/checkout@v2
             - name: Create Release
               id: create_release
@@ -27,9 +27,9 @@ jobs:
         steps:
             - uses: actions/checkout@v2
             - name: Setup .npmrc file to publish to npm
-              uses: actions/setup-node@v1
+              uses: actions/setup-node@v2
               with:
-                  node-version: "14.x"
+                  node-version: "16.x"
                   registry-url: "https://registry.npmjs.org"
             - name: Install modules
               run: npm install
@@ -40,9 +40,9 @@ jobs:
               env:
                   NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
             - name: Setup .npmrc file to publish to GitHub Packages
-              uses: actions/setup-node@v1
+              uses: actions/setup-node@v2
               with:
-                  node-version: "14.x"
+                  node-version: "16.x"
                   registry-url: "https://npm.pkg.github.com"
                   scope: "@aritzmetal"
             - run: npm run addscope
