--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "typescript-react-infinite-masonry",
     "author": "Pedro Aritz Rasines Relloso <pedro.a.rasines@gmail.com>",
     "license": "MIT",
-    "version": "1.0.0",
+    "version": "0.2.0",
     "description": "Infinite masonry on React with Typescript . React Masonry Layout - Bricks.js and React Infinite Scroll Component",
     "main": "dist/index.js",
     "module": "dist/index.js",
@@ -43,7 +43,7 @@
     },
     "dependencies": {
         "bricks.js": "^1.7.0",
-        "react-infinite-scroller": "^1.2.5"
+        "react-infinite-scroll-component": "^6.1.0"
     },
     "devDependencies": {
         "@commitlint/cli": "^13.1.0",
@@ -51,7 +51,6 @@
         "@testing-library/jest-dom": "^5.16.1",
         "@testing-library/react": "^12.1.2",
         "@types/bricks.js": "^1.8.2",
-        "@types/react-infinite-scroller": "^1.2.2",
         "@types/jest": "^27.0.1",
         "@types/react": "^17.0.37",
         "@types/react-dom": "16.9.1",
